# quarry

./: .gitignore  .mcp.json  README.md  index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.claude/agents/: deploy-agent.md  fix-workflow.md
.claude/commands/: deploy.md  fix-workflow.md
.github/workflows/: ci.yml  release.yml
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  error.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: connection.rs  query.rs
src-tauri/src/db/: filter.rs  mod.rs  mysql.rs  postgres.rs
src-tauri/src/storage/: connections.rs  mod.rs  queries.rs
src-tauri/src/tests/: ai.rs  connection.rs  connections.rs  db_mod.rs  error.rs  filter.rs  mod.rs  models.rs  mysql.rs  mysql_integration.rs  postgres.rs  postgres_integration.rs  push_conditions.rs  queries_storage.rs  query.rs  query_commands.rs  storage.rs
src/components/: AiPromptBar.test.tsx  AiPromptBar.tsx  CellContent.test.tsx  CellContent.tsx  ColumnHeader.test.tsx  ColumnHeader.tsx  ConnectionForm.test.tsx  ConnectionForm.tsx  DbTypeIcon.test.tsx  DbTypeIcon.tsx  IconBar.test.tsx  IconBar.tsx  QueryEditor.test.tsx  QueryEditor.tsx  SavedQueriesPanel.test.tsx  SavedQueriesPanel.tsx  SchemaTab.test.tsx  SchemaTab.tsx  SettingsPanel.test.tsx  SettingsPanel.tsx  Sidebar.test.tsx  Sidebar.tsx  SqlEditor.test.tsx  SqlEditor.tsx  TabBar.test.tsx  TabBar.tsx
src/hooks/: useAiKey.test.ts  useAiKey.ts  useClickOutside.test.ts  useClickOutside.ts  useColumnResize.ts  (+27 more)
(+65 files in other folders)
