[package]
name = "quarry"
version = "0.1.1"
description = "Quarry - Database Explorer"
authors = ["Antoine Guay"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "Quarry"
path = "src/main.rs"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "quarry_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "mysql", "json", "bigdecimal", "chrono"] }
bigdecimal = "0.4"
tokio = { version = "1", features = ["full"] }
keyring = "2"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
wiremock = "0.6"
tauri = { version = "2", features = ["test"] }
testcontainers = "0.27.1"
testcontainers-modules = { version = "0.15.0", features = ["postgres", "mysql"] }
